[package]
name = "rust-web"
version = "0.0.1"
edition = "2021"
authors = ["zengjie <1063423131@qq.com>"]
homepage = "https://github.com/JieZeng1993/rust-web"
description = "learning web framework"
license = "MIT"
keywords = ["http", "web", "framework", "async"]
categories = [
    "network-programming",
    "asynchronous",
    "web-programming::http-server",
    "web-programming::websocket",
]
[[bin]]
name = "server-test"
path = "src/web/mod.rs"
[dependencies]
# features "net" 已经被hyper引入
tokio = { vesion = "*", features = ["macros", "rt-multi-thread", "sync"] }
hyper = { version = "*", features = ["server", "runtime", "http1", "http2"] }